# adauto

./: .env.example  .gitignore  ADAUTO_LLM_GUIDE.md  USAGE_SCENARIOS.md  atlas_scan.py  pyproject.toml  requirements.txt  vercel.json
.atlas/brain/: vocabulary.db
.atlas/cache/: graph.json
.github/scripts/: build_nuitka_wheel.py
.github/workflows/: publish.yml
adauto/: __init__.py  __main__.py  analytics.py  cli.py  cognition_envelope.py  config.py  crash.py  db.py  discover.py  ethics.py  first_run.py  generator.py  license.py  licensing_core.py  mcp_panel.py  pain_detector.py  pulse.py  repo_intake.py  responder.py  scheduler.py  server.py  service.py  signal_hunter.py  signal_store.py  strategy.py
adauto/.atlas/cache/: graph.json
api/: kv.py  verify.py  webhook.py
campaigns/: code-atlas.toml  deepstrain.toml
